Create Database Schema

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
     "cSpell.words": [
         "Barnholtz",
         "Bonidie",
-        "Gywnn"
+        "fname",
+        "Gywnn",
+        "lname"
     ]
 }
